<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_toolar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"


        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center"
            android:background="?attr/colorPrimary"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/food_app_toolbar_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/food_app_bar_back_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    app:srcCompat="@drawable/nav_back_arrow"
                    android:contentDescription="@string/dash"
                    tools:ignore="VectorDrawableCompat"
                    android:layout_marginLeft="10dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/food_app_item_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@id/food_app_bar_back_iv"
                    android:layout_toRightOf="@id/food_app_bar_back_iv"
                    android:text="@string/six"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="18dp"
                    android:layout_toEndOf="@id/food_app_item_count"
                    android:layout_toRightOf="@id/food_app_item_count"
                    android:text="@string/items"
                    android:textColor="?attr/colorOnPrimary"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/total_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="300dp"
                    android:layout_marginLeft="300dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/total"
                    android:textColor="?attr/colorOnPrimary" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/price_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_toEndOf="@id/total_price_tv"
                    android:layout_toRightOf="@id/total_price_tv"
                    android:text="@string/thousand"
                    android:textColor="?attr/colorOnPrimary"

                    />
            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/food_items_list"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>