<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_person_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:fabSize="normal"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/plus_drawable"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_toolar_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"

        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center"
            android:background="?attr/colorPrimary"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/food_app_toolbar_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/food_app_bar_back_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    app:srcCompat="@drawable/nav_back_arrow"
                    android:contentDescription="@string/dash"
                    tools:ignore="VectorDrawableCompat"
                    android:layout_marginLeft="10dp" />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/item_image_iv"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toEndOf="@id/food_app_bar_back_iv"
                    android:contentDescription="@string/dash"/>
                <TextView
                    android:id="@+id/uploadbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_layout"
                    android:layout_marginTop="25dp"
                    android:text="upload"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@id/item_image_iv"/>


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/food_app_item_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:visibility="gone"
                    android:layout_toEndOf="@id/food_app_bar_back_iv"
                    android:layout_toRightOf="@id/food_app_bar_back_iv"
                    android:text="@string/six"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="18dp"
                    android:visibility="gone"
                    android:layout_toEndOf="@id/food_app_item_count"
                    android:layout_toRightOf="@id/food_app_item_count"
                    android:text="@string/items"
                    android:textColor="?attr/colorOnPrimary"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/total_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="300dp"
                    android:layout_marginLeft="300dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/total"
                    android:textColor="?attr/colorOnPrimary" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/price_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_toEndOf="@id/total_price_tv"
                    android:layout_toRightOf="@id/total_price_tv"
                    android:text="@string/thousand"
                    android:textStyle="bold"
                    android:textColor="?attr/colorOnPrimary"

                    />
            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_toolar_layout"
        app:layout_constraintStart_toStartOf="parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/main_toolar_layout"
            app:layout_constraintStart_toStartOf="parent">

            <!--        <ScrollView-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="match_parent"-->
            <!--            app:layout_constraintBottom_toBottomOf="parent"-->
            <!--            -->
            <!--           >-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/food_items_list"
                android:layout_marginBottom="45dp"
                />
            <!--        </ScrollView>-->
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>